RHAIENG-287, #2600: fix two out of the three failing tf rocm tests

--- a/jupyter/rocm/tensorflow/ubi9-python-3.12/test/test_notebook.ipynb
+++ b/jupyter/rocm/tensorflow/ubi9-python-3.12/test/test_notebook.ipynb
@@ -45,7 +45,7 @@
     "        self.assertEqual(actual_major_minor, expected_major_minor, \"incorrect version\")\n",
     "\n",
     "    def test_tensorflow_version(self):\n",
-    "        expected_major_minor = get_expected_version(\"ROCm-TensorFlow\")\n",
+    "        expected_major_minor = get_expected_version(\"TensorFlow-ROCm\")\n",
     "        actual_major_minor = get_major_minor(tf.__version__)\n",
     "        self.assertEqual(actual_major_minor, expected_major_minor, \"incorrect version\")\n",
     "\n",
@@ -68,7 +68,7 @@
     "          tf.keras.layers.Dense(10)\n",
     "        ])\n",
     "        predictions = model(x_train[:1]).numpy()\n",
-    "        assert predictions\n",
+    "        assert predictions is not None and len(predictions) > 0\n",
     "        tf.nn.softmax(predictions).numpy()\n",
     "        loss_fn = tf.keras.losses.SparseCategoricalCrossentropy(from_logits=True)\n",
     "        loss_fn(y_train[:1], predictions).numpy()\n",
